# dune-typetree

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  COPYING  COPYING.md  LICENSE.md  Makefile.am  README  README.GIT  README.md  RELEASE_NOTES  config.h.cmake  configure.ac  dune-typetree-config.cmake.in  dune-typetree.pc.in  dune.module
LICENSES/: LicenseRef-GPL-2.0-only-with-PDELab-exception.txt
cmake/modules/: CMakeLists.txt  CXXConstexprIf.cmake  CXXExpansionStatements.cmake  CXXFoldExpressions.cmake  DuneTypetreeMacros.cmake  FindCXXDecltype.cmake  FindCXXTemplateAliases.cmake  FindGCCTypeof.cmake  Makefile.am
cmake/pkg/: dune-typetree-config.cmake.in
doc/: CMakeLists.txt  Makefile.am
doc/doxygen/: CMakeLists.txt  Doxylocal  Makefile.am  mainpage  mainpage.txt  modules  modules.txt
dune/: CMakeLists.txt  Makefile.am  typetree.hh
dune/common/: CMakeLists.txt  hybridmultiindex.hh
dune/common/typetree/: CMakeLists.txt  childaccess.hh  nodeconcepts.hh  traversal.hh  treecontainer.hh  treepath.hh
dune/common/typetree/test/: CMakeLists.txt  testtypetreetraversal.cc  testtypetreetreepath.cc  testtypetreeutilities.hh
dune/typetree/: CMakeLists.txt  Makefile.am  accumulate_static.hh  applytochildrensingletree.hh  applytochildrentreepair.hh  childextraction.hh  compositenode.hh  compositenodemacros.hh  dynamicpowernode.hh  exceptions.hh  filteredcompositenode.hh  filters.hh  fixedcapacitystack.hh  generictransformationdescriptors.hh  hybridmultiindex.hh  leafnode.hh  nodeconcepts.hh  nodeinterface.hh  nodetags.hh  pairtraversal.hh  powercompositenodetransformationtemplates.hh  powernode.hh  proxynode.hh  simpletransformationdescriptors.hh  transformation.hh  transformationutilities.hh  traversal.hh  traversalutilities.hh  treecontainer.hh  treepath.hh  typetraits.hh  typetree.hh  utility.cc  utility.hh  variadiccompositenode.hh  visitor.hh
lib/: Makefile.am
m4/: CMakeLists.txt  Makefile.am  cxx11_decltype.m4  cxx11_template_aliases.m4  dune-typetree.m4  gcc___typeof__.m4
test/: .gitignore  CMakeLists.txt  Makefile.am  testcallbacktraversal.cc  testchildextraction.cc  testfilteredcompositenode.cc  testhybridtreepath.cc  testnodeconcepts.cc  testproxynode.cc  testtreecontainer.cc  testtypetree.cc  testtypetreetransformation.cc  typetreetargetnodes.hh  typetreetestswitch.hh  typetreetestutility.hh
