MODULES =					\
  DuneTypetreeMacros.cmake			\
  FindCXXDecltype.cmake				\
  FindCXXInitializerList.cmake			\
  FindCXXTemplateAliases.cmake			\
  FindGCCTypeof.cmake				\
  FindPackageMultipass.cmake			\
  ResolveCompilerPaths.cmake

modulesdir = $(datadir)/cmake/modules
dist_modules_DATA = ${MODULES}

include $(top_srcdir)/am/global-rules
EXTRA_DIST = CMakeLists.txt
