# SPDX-FileCopyrightInfo: Copyright © DUNE Project contributors, see file LICENSE.md in module root
# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-GPL-2.0-only-with-PDELab-exception

install(FILES
  childaccess.hh
  nodeconcepts.hh
  treecontainer.hh
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/common/typetree)
